--- a/NiziKit.Editor/Views/AddComponentPanel.axaml
+++ b/NiziKit.Editor/Views/AddComponentPanel.axaml
@@ -4,13 +4,13 @@
              x:Class="NiziKit.Editor.Views.AddComponentPanel"
              x:DataType="vm:GameObjectViewModel">
 
-    <Border Classes="panel"
-            CornerRadius="{DynamicResource EditorControlCornerRadius}"
+    <Border Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
+            CornerRadius="{DynamicResource ControlCornerRadius}"
             Padding="8"
             Margin="0,8,0,0">
         <StackPanel Spacing="4">
             <TextBlock Text="Add Component"
-                       Classes="header"
+                       Theme="{StaticResource BodyStrongTextBlockStyle}"
                        Margin="0,0,0,8"/>
 
             <ScrollViewer MaxHeight="250"
