--- a/NiziKit.Editor/Views/ComponentsPanel.axaml
+++ b/NiziKit.Editor/Views/ComponentsPanel.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="using:NiziKit.Editor.ViewModels"
              xmlns:views="using:NiziKit.Editor.Views"
+             xmlns:ui="using:FluentAvalonia.UI.Controls"
              x:Class="NiziKit.Editor.Views.ComponentsPanel"
              x:DataType="vm:EditorViewModel">
 
@@ -11,65 +12,64 @@
             <StackPanel IsVisible="{Binding !HasSelection}"
                         HorizontalAlignment="Center"
                         Margin="0,40">
-                <PathIcon
-                    Data="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
-                    Width="48" Height="48"
-                    Foreground="{DynamicResource TextMutedBrush}"
-                    HorizontalAlignment="Center"
-                    Margin="0,0,0,12" />
+                <ui:SymbolIcon Symbol="People"
+                               FontSize="48"
+                               Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                               HorizontalAlignment="Center"
+                               Margin="0,0,0,12"/>
                 <TextBlock Text="Select an object to edit"
-                           Classes="muted"
-                           HorizontalAlignment="Center" 
-                           FontSize="{DynamicResource EditorFontSizeSmall}"/>
+                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                           HorizontalAlignment="Center"/>
             </StackPanel>
 
             <StackPanel IsVisible="{Binding DataContext.HasSelection, RelativeSource={RelativeSource AncestorType=UserControl}}"
                         DataContext="{Binding SelectedGameObject}">
 
-                <Border Background="{DynamicResource SurfaceBrush}"
-                        CornerRadius="{DynamicResource EditorControlCornerRadius}"
+                <Border Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
+                        CornerRadius="{DynamicResource ControlCornerRadius}"
                         Padding="12"
                         Margin="0,0,0,14">
                     <Grid ColumnDefinitions="Auto,Auto,*" RowDefinitions="Auto">
                         <CheckBox Grid.Column="0"
                                   IsChecked="{Binding IsActive}"
                                   VerticalAlignment="Center"
-                                  Margin="0,0,8,0" />
+                                  Margin="0,0,8,0"/>
                         <TextBlock Grid.Column="1"
                                    Text="Name"
-                                   Classes="label"
                                    VerticalAlignment="Center"
-                                   Margin="0,0,10,0" />
+                                   Margin="0,0,10,0"/>
                         <TextBox Grid.Column="2"
                                  Text="{Binding Name}"
-                                 VerticalAlignment="Center" />
+                                 VerticalAlignment="Center"/>
                     </Grid>
                 </Border>
 
-                <TextBlock Text="Transform" Classes="section-header" />
+                <TextBlock Text="Transform"
+                           Theme="{StaticResource BodyStrongTextBlockStyle}"
+                           Margin="0,0,0,8"/>
 
-                <TextBlock Text="Position" Classes="label" Margin="0,0,0,4" />
+                <TextBlock Text="Position" Margin="0,0,0,4"/>
                 <Grid ColumnDefinitions="*,*,*" Margin="0,0,0,12">
                     <views:DraggableValueEditor Grid.Column="0"
                                                 Label="X"
                                                 LabelColor="{DynamicResource AxisXBrush}"
                                                 Value="{Binding PositionX}"
                                                 DragSensitivity="0.05"
-                                                Margin="0,0,4,0" />
+                                                Margin="0,0,4,0"/>
                     <views:DraggableValueEditor Grid.Column="1"
                                                 Label="Y"
                                                 LabelColor="{DynamicResource AxisYBrush}"
                                                 Value="{Binding PositionY}"
                                                 DragSensitivity="0.05"
-                                                Margin="0,0,4,0" />
+                                                Margin="0,0,4,0"/>
                     <views:DraggableValueEditor Grid.Column="2"
                                                 Label="Z"
                                                 LabelColor="{DynamicResource AxisZBrush}"
                                                 Value="{Binding PositionZ}"
-                                                DragSensitivity="0.05" />
+                                                DragSensitivity="0.05"/>
                 </Grid>
 
-                <TextBlock Text="Rotation" Classes="label" Margin="0,0,0,4" />
+                <TextBlock Text="Rotation" Margin="0,0,0,4"/>
                 <Grid ColumnDefinitions="*,*,*" Margin="0,0,0,12">
                     <views:DraggableValueEditor Grid.Column="0"
                                                 Label="X"
@@ -77,58 +77,62 @@
                                                 Value="{Binding RotationX}"
                                                 DragSensitivity="0.5"
                                                 StringFormat="F1"
-                                                Margin="0,0,4,0" />
+                                                Margin="0,0,4,0"/>
                     <views:DraggableValueEditor Grid.Column="1"
                                                 Label="Y"
                                                 LabelColor="{DynamicResource AxisYBrush}"
                                                 Value="{Binding RotationY}"
                                                 DragSensitivity="0.5"
                                                 StringFormat="F1"
-                                                Margin="0,0,4,0" />
+                                                Margin="0,0,4,0"/>
                     <views:DraggableValueEditor Grid.Column="2"
                                                 Label="Z"
                                                 LabelColor="{DynamicResource AxisZBrush}"
                                                 Value="{Binding RotationZ}"
                                                 DragSensitivity="0.5"
-                                                StringFormat="F1" />
+                                                StringFormat="F1"/>
                 </Grid>
 
-                <TextBlock Text="Scale" Classes="label" Margin="0,0,0,4" />
+                <TextBlock Text="Scale" Margin="0,0,0,4"/>
                 <Grid ColumnDefinitions="*,*,*" Margin="0,0,0,16">
                     <views:DraggableValueEditor Grid.Column="0"
                                                 Label="X"
                                                 LabelColor="{DynamicResource AxisXBrush}"
                                                 Value="{Binding ScaleX}"
                                                 DragSensitivity="0.01"
-                                                Margin="0,0,4,0" />
+                                                Margin="0,0,4,0"/>
                     <views:DraggableValueEditor Grid.Column="1"
                                                 Label="Y"
                                                 LabelColor="{DynamicResource AxisYBrush}"
                                                 Value="{Binding ScaleY}"
                                                 DragSensitivity="0.01"
-                                                Margin="0,0,4,0" />
+                                                Margin="0,0,4,0"/>
                     <views:DraggableValueEditor Grid.Column="2"
                                                 Label="Z"
                                                 LabelColor="{DynamicResource AxisZBrush}"
                                                 Value="{Binding ScaleZ}"
-                                                DragSensitivity="0.01" />
+                                                DragSensitivity="0.01"/>
                 </Grid>
 
-                <Border Classes="separator" Margin="0,6,0,14" />
-                <TextBlock Text="Components" Classes="section-header" />
+                <Border Height="1"
+                        Background="{DynamicResource DividerStrokeColorDefaultBrush}"
+                        Margin="0,6,0,14"/>
+                <TextBlock Text="Components"
+                           Theme="{StaticResource BodyStrongTextBlockStyle}"
+                           Margin="0,0,0,8"/>
 
                 <ItemsControl ItemsSource="{Binding Components}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate x:DataType="vm:ComponentViewModel">
-                            <Border Background="{DynamicResource SurfaceBrush}"
-                                    CornerRadius="{DynamicResource EditorControlCornerRadius}"
+                            <Border Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
+                                    CornerRadius="{DynamicResource ControlCornerRadius}"
                                     Margin="0,0,0,8"
                                     Padding="10">
                                 <StackPanel Spacing="0">
                                     <Grid ColumnDefinitions="Auto,*,Auto">
                                         <ToggleButton Grid.Column="0"
                                                       IsChecked="{Binding IsExpanded}"
-                                                      Classes="collapse"
+                                                      Padding="4"
                                                       VerticalAlignment="Center">
                                             <ToggleButton.Styles>
                                                 <Style Selector="ToggleButton">
@@ -136,7 +140,7 @@
                                                         <Template>
                                                             <PathIcon Data="M8,5.14V19.14L19,12.14L8,5.14Z"
                                                                       Width="12" Height="12"
-                                                                      Foreground="{DynamicResource TextSecondaryBrush}" />
+                                                                      Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
                                                         </Template>
                                                     </Setter>
                                                 </Style>
@@ -145,7 +149,7 @@
                                                         <Template>
                                                             <PathIcon Data="M7,10L12,15L17,10H7Z"
                                                                       Width="12" Height="12"
-                                                                      Foreground="{DynamicResource TextSecondaryBrush}" />
+                                                                      Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
                                                         </Template>
                                                     </Setter>
                                                 </Style>
@@ -153,24 +157,22 @@
                                         </ToggleButton>
                                         <TextBlock Grid.Column="1"
                                                    Text="{Binding DisplayName}"
-                                                   Classes="component-name"
-                                                   Margin="6,0,0,0" />
+                                                   Theme="{StaticResource BodyStrongTextBlockStyle}"
+                                                   VerticalAlignment="Center"
+                                                   Margin="6,0,0,0"/>
                                         <Button Grid.Column="2"
-                                                Classes="ghost"
                                                 Padding="6,4"
                                                 Command="{Binding RemoveCommand}"
                                                 ToolTip.Tip="Remove Component">
-                                            <PathIcon
-                                                Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
-                                                Width="16"
-                                                Height="16"
-                                                Foreground="{DynamicResource DangerBrush}" />
+                                            <ui:SymbolIcon Symbol="Delete"
+                                                           FontSize="16"
+                                                           Foreground="#E05555"/>
                                         </Button>
                                     </Grid>
                                     <Border IsVisible="{Binding IsExpanded}"
                                             Margin="0,10,0,0"
                                             Padding="0">
-                                        <views:ComponentEditor DataContext="{Binding}" />
+                                        <views:ComponentEditor DataContext="{Binding}"/>
                                     </Border>
                                 </StackPanel>
                             </Border>
@@ -183,22 +185,18 @@
                         Padding="12,10"
                         Margin="0,6,0,0"
                         IsVisible="{Binding !IsAddingComponent}"
-                        Command="{Binding ToggleAddComponentPanelCommand}"
-                        Background="{DynamicResource SurfaceBrush}"
-                        BorderBrush="{DynamicResource PanelBorderBrush}"
-                        BorderThickness="1">
+                        Command="{Binding ToggleAddComponentPanelCommand}">
                     <StackPanel Orientation="Horizontal" Spacing="8">
-                        <PathIcon Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
-                                  Width="16" Height="16"
-                                  Foreground="{DynamicResource AccentBrush}" />
+                        <ui:SymbolIcon Symbol="Add"
+                                       FontSize="16"
+                                       Foreground="{DynamicResource AccentFillColorDefaultBrush}"/>
                         <TextBlock Text="Add Component"
-                                   Foreground="{DynamicResource TextSecondaryBrush}"
-                                   FontSize="{DynamicResource EditorFontSizeSmall}" />
+                                   Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
                     </StackPanel>
                 </Button>
 
                 <views:AddComponentPanel IsVisible="{Binding IsAddingComponent}"
-                                         DataContext="{Binding}" />
+                                         DataContext="{Binding}"/>
             </StackPanel>
         </StackPanel>
     </ScrollViewer>
