--- a/NiziKit.Editor/Views/Editors/StructEditor.axaml
+++ b/NiziKit.Editor/Views/Editors/StructEditor.axaml
@@ -2,8 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="NiziKit.Editor.Views.Editors.StructEditor">
 
-    <Border Classes="panel"
-            CornerRadius="{DynamicResource EditorControlCornerRadius}"
+    <Border Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
+            CornerRadius="{DynamicResource ControlCornerRadius}"
             Padding="8"
             Margin="0,4">
         <ItemsControl x:Name="FieldsControl"/>
