--- a/NiziKit.Editor/Views/PackManagerView.axaml
+++ b/NiziKit.Editor/Views/PackManagerView.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="using:NiziKit.Editor.ViewModels"
              xmlns:views="using:NiziKit.Editor.Views"
+             xmlns:ui="using:FluentAvalonia.UI.Controls"
              x:Class="NiziKit.Editor.Views.PackManagerView"
              x:DataType="vm:PackManagerViewModel">
 
@@ -15,7 +16,7 @@
             <Grid RowDefinitions="Auto,*,Auto">
                 <TextBlock Grid.Row="0"
                            Text="Packs"
-                           Classes="section-header"
+                           Theme="{StaticResource BodyStrongTextBlockStyle}"
                            Margin="4,0,0,8"/>
 
                 <ListBox Grid.Row="1"
@@ -26,10 +27,9 @@
                         <DataTemplate x:DataType="vm:PackInfo">
                             <StackPanel Spacing="2" Margin="4,4">
                                 <TextBlock Text="{Binding Name}"
-                                           FontWeight="SemiBold"
-                                           FontSize="{DynamicResource EditorFontSizeNormal}"/>
+                                           FontWeight="SemiBold"/>
                                 <TextBlock Text="{Binding Version}"
-                                           Classes="muted"/>
+                                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
@@ -44,8 +44,7 @@
                             Padding="12,6"/>
                     <Button Command="{Binding RefreshPacksCommand}"
                             Padding="8,6">
-                        <PathIcon Data="M17.65 6.35A7.958 7.958 0 0 0 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0 1 12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
-                                  Width="16" Height="16"/>
+                        <ui:SymbolIcon Symbol="Refresh" FontSize="16"/>
                     </Button>
                 </StackPanel>
             </Grid>
@@ -69,7 +68,7 @@
                                 Spacing="8"
                                 VerticalAlignment="Center">
                         <TextBlock Text="v"
-                                   Classes="muted"
+                                   Foreground="{DynamicResource TextFillColorTertiaryBrush}"
                                    VerticalAlignment="Center"/>
                         <TextBox Text="{Binding PackVersion}"
                                  Watermark="1.0.0"
@@ -108,15 +107,14 @@
                                                 CornerRadius="4"
                                                 Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}">
                                             <Grid RowDefinitions="*,Auto,Auto">
-                                                <PathIcon Grid.Row="0"
-                                                          Data="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
-                                                          Width="32" Height="32"
-                                                          Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                                          VerticalAlignment="Center"
-                                                          HorizontalAlignment="Center"/>
+                                                <ui:SymbolIcon Grid.Row="0"
+                                                               Symbol="Image"
+                                                               FontSize="32"
+                                                               Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                                               VerticalAlignment="Center"
+                                                               HorizontalAlignment="Center"/>
                                                 <TextBlock Grid.Row="1"
                                                            Text="{Binding Key}"
-                                                           FontSize="{DynamicResource EditorFontSizeSmall}"
                                                            TextTrimming="CharacterEllipsis"
                                                            TextAlignment="Center"
                                                            ToolTip.Tip="{Binding Key}"
@@ -167,15 +165,14 @@
                                                 DoubleTapped="OnAssetCardDoubleTapped"
                                                 Tag="{Binding}">
                                             <Grid RowDefinitions="*,Auto,Auto">
-                                                <PathIcon Grid.Row="0"
-                                                          Data="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.94-.49-7-3.85-7-7.93s3.05-7.44 7-7.93v15.86zm2-15.86c1.03.13 2 .45 2.87.93H13v-.93zM13 7h5.24c.25.31.48.65.68 1H13V7zm0 3h6.74c.08.33.15.66.19 1H13v-1zm0 9.93V19h2.87c-.87.48-1.84.8-2.87.93zM18.24 17H13v-1h5.92c-.2.35-.43.69-.68 1zm1.5-3H13v-1h6.93c-.04.34-.11.67-.19 1z"
-                                                          Width="32" Height="32"
-                                                          Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                                          VerticalAlignment="Center"
-                                                          HorizontalAlignment="Center"/>
+                                                <ui:SymbolIcon Grid.Row="0"
+                                                               Symbol="Globe"
+                                                               FontSize="32"
+                                                               Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                                               VerticalAlignment="Center"
+                                                               HorizontalAlignment="Center"/>
                                                 <TextBlock Grid.Row="1"
                                                            Text="{Binding Key}"
-                                                           FontSize="{DynamicResource EditorFontSizeSmall}"
                                                            TextTrimming="CharacterEllipsis"
                                                            TextAlignment="Center"
                                                            ToolTip.Tip="{Binding Key}"
@@ -235,7 +232,6 @@
                                                           HorizontalAlignment="Center"/>
                                                 <TextBlock Grid.Row="1"
                                                            Text="{Binding Key}"
-                                                           FontSize="{DynamicResource EditorFontSizeSmall}"
                                                            TextTrimming="CharacterEllipsis"
                                                            TextAlignment="Center"
                                                            ToolTip.Tip="{Binding Key}"
@@ -286,15 +282,14 @@
                                                 DoubleTapped="OnAssetCardDoubleTapped"
                                                 Tag="{Binding}">
                                             <Grid RowDefinitions="*,Auto,Auto">
-                                                <PathIcon Grid.Row="0"
-                                                          Data="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
-                                                          Width="32" Height="32"
-                                                          Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                                          VerticalAlignment="Center"
-                                                          HorizontalAlignment="Center"/>
+                                                <ui:SymbolIcon Grid.Row="0"
+                                                               Symbol="Code"
+                                                               FontSize="32"
+                                                               Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                                               VerticalAlignment="Center"
+                                                               HorizontalAlignment="Center"/>
                                                 <TextBlock Grid.Row="1"
                                                            Text="{Binding Key}"
-                                                           FontSize="{DynamicResource EditorFontSizeSmall}"
                                                            TextTrimming="CharacterEllipsis"
                                                            TextAlignment="Center"
                                                            ToolTip.Tip="{Binding Key}"
@@ -333,7 +328,7 @@
                     Padding="12,8"
                     IsVisible="{Binding StatusMessage, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
                 <TextBlock Text="{Binding StatusMessage}"
-                           Classes="muted"/>
+                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
             </Border>
         </Grid>
 
@@ -343,11 +338,11 @@
             <StackPanel HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Spacing="12">
-                <PathIcon Data="M20 6h-8l-2-2H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm0 12H4V8h16v10z"
-                          Width="56" Height="56"
-                          Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
+                <ui:SymbolIcon Symbol="Folder"
+                               FontSize="56"
+                               Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
                 <TextBlock Text="Select a pack or create a new one"
-                           Classes="muted"
+                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"
                            HorizontalAlignment="Center"/>
             </StackPanel>
         </Border>
@@ -369,7 +364,7 @@
             <Grid RowDefinitions="Auto,*,Auto">
                 <TextBlock Grid.Row="0"
                            Text="{Binding FileBrowserTitle}"
-                           Classes="header"
+                           Theme="{StaticResource SubtitleTextBlockStyle}"
                            Margin="0,0,0,12"/>
                 <views:FileBrowserGrid Grid.Row="1"
                                        DataContext="{Binding FileBrowserViewModel}"/>
@@ -401,7 +396,7 @@
             <Grid RowDefinitions="Auto,*,Auto">
                 <TextBlock Grid.Row="0"
                            Text="{Binding AssetEditorTitle}"
-                           Classes="header"
+                           Theme="{StaticResource SubtitleTextBlockStyle}"
                            Margin="0,0,0,16"/>
 
                 <!-- Material Editor -->
